--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,28 @@
   flex: 1;
   margin-right: 1em;
 }
+
+#master, #perishables, #non-perishables {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#master li {
+  padding: 0.5em;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.button {
+  padding: 0.5em;
+}
+
+#perishables li {
+  padding: 0.5em;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
